[package]
name = "granite-client"
version = "0.2.0"
edition = "2021"
description = "Typed async client for the Granite approval core. One source of truth for the wire contract, header policy, and destructive-intent taxonomy."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stackwell-labs/granite-client"
readme = "README.md"
keywords = ["approval", "granite", "agent", "consent"]
categories = ["api-bindings", "authentication"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde"] }
# Only `time` (for await_decision's poll sleep). The runtime-agnostic
# primitive is poll_decision, which pulls in nothing.
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
