[package]
name = "granite-client"
version = "0.4.0"
edition = "2021"
description = "Typed async client for the Granite approval core. One source of truth for the wire contract, header policy, and destructive-intent taxonomy."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stackwell-labs/granite-client"
readme = "README.md"
keywords = ["approval", "granite", "agent", "consent"]
categories = ["api-bindings", "authentication"]

[dependencies]
# The shared trust-environment primitive (`Environment { Prod, Test{tenant} }`).
# Reused — not re-declared — so Granite, this client, and capability all speak
# ONE environment type, and a Test approval can't launder into Prod.
# Pinned to the published capability v0.4.0 lattice tag. granite-client uses only
# `Environment` (Prod / Test{tenant}), which is unchanged across the v0.3->v0.4
# lattice bump, so this is a clean re-pin (the lattice's breaking verify/rights API
# is not used here). Bumped to granite-client v0.4.0 to track the capability major.
capability = { git = "https://github.com/stackwell-labs/capability.git", tag = "v0.4.0" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde"] }
# Only `time` (for await_decision's poll sleep). The runtime-agnostic
# primitive is poll_decision, which pulls in nothing.
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
